--- a/css/project.css
+++ b/css/project.css
@@ -153,6 +153,15 @@
 	font-size: 12px;
 	max-height: 64px;
 	overflow: hidden;
+	white-space: normal;
+	text-overflow: ellipsis;
+	background: linear-gradient(to bottom, #000000 70%, #ffffff 95%), #ffffff;
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
+}
+.board-box .board .cards .card .body.empty {
+	padding: 0;
+	border: 0;
 }
 .board-box .board .cards .card .foot {
 	padding: 4px 8px;
@@ -203,4 +212,42 @@
 }
 .activ-box .activity a:hover {
 	color: #601ef2;
+}
+#model-card-box .box .body {
+	max-height: 320px;
+	overflow-y: auto;
+	margin-right: -32px;
+	padding-right: 32px;
+}
+#model-card-box .box .body::before {
+	content: "\2630";
+	font-size: 20px;
+    line-height: 20px;
+    position: absolute;
+    width: 32px;
+    text-align: center;
+    left: 4px;
+    color: #aaaaaa;
+}
+#model-card-box .box .card-detail {
+	padding: 8px 16px;
+	margin: 0px -32px;
+	margin-bottom: 16px;
+	border-bottom: 1px solid #dddddd;
+	border-top: 1px solid #dddddd;
+}
+#model-card-box .box .card-detail .menu-h li {
+	background: #f5f5f5;
+	font-size: 16px;
+	line-height: 16px;
+	width: 16px;
+	text-align: center;
+	padding: 4px;
+	border: 1px solid #dddddd;
+	cursor: pointer;
+	margin-left: 4px;
+}
+#model-card-box .box .card-detail .menu-h li:hover {
+	background: #f5f5f5;
+	border: 1px solid #aaaaaa;
 }
